# VeloBall

./: .gitignore  .gitmodules  LICENSE.txt  README.md  constants.py  extractor.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tour_constants.py  trajectories.py
.github/workflows/: python-package.yml
DataGen/: create_synthetic_data.py
FeatureExtractionTools/: bagOfWordsTfIdf.py  word2vec.py
classification/: newsgroups.py
classification/cnn/: cnn.py
classification/lstm/: lstm.py
classification/mlp/: mlp.py
classification/test/: test.py  test2.py
classification/toy/: arch_wiki.py  basic_lstm.py  heirarchical_lstm.py  hlstm.py  hlstmd.py  lstm.py  make_movies_wiki_data.py  newsgroups_sentences.py  preprocess_for_lstm.py  simple_news_data.py
classification/toy/models/: basic_lstm.py  hlstm.py  hlstmd.py  lstm.py
classification/toy/wiki_data/movies/: CRIME.csv  all_movies.npy
crawler/: __init__.py  browser_automation.py
generation/char_rnn/: attrib.py  chat.py  gen.py
scripts/: rider_list.js  scrape_pcs.js
src/velo_scraper/: __about__.py  __init__.py  cli.py
tests/: get_race_data.py  get_research_papers.py  giro_constants.py  researchers.json  test_giro_trajectories.py  test_news_enrichment.py  test_tour_trajctories.py  trajectories.py
